added a separate method for calling google search. using google api to do that
